--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+:root{
+    --bee-yellow: #ffd000be;
+}
+
+* {
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+.poetsen {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+span{
+    font-size: .85em;
+}
+
+.honey-bees{
+    background-color: #ffd00015;
+    color: white;
+    text-shadow: 1px 1px 3px black;
+    border-radius: 15px;
+    backdrop-filter: blur(3px);
+    height: 5.30em;
+}
+
+.bee-yellow{
+    background-color: var(--bee-yellow)
+}
+
+.icon-bigger{
+    font-size: 1.5em;
+}
+
 .top-bg-img {
     background-image: url(https://images.unsplash.com/photo-1576347819574-903b60efcd69?q=80&w=1333&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     min-height: 60dvh;
@@ -11,8 +48,26 @@
     width: 20em;
     margin-left: 3em;
     margin-top: 3em;
+    margin-right: 3em;
     border-radius: 1em;
-    box-shadow: 0px 5px 5px #000000be;
+    box-shadow: 5px 5px 5px var(--bee-yellow);
+    padding: 1em;
+    border-style: solid;
+    border-color: #000000a5;
+}
+
+input{
+    margin: 1em;
+    width: 80%;
+}
+
+.half-input{
+    width: 45%;
+    margin-bottom: 2em;
+}
+
+.quarter-input{
+    width: 25%;
 }
 
 .small-text{
@@ -31,7 +86,7 @@
 }
 
 .review-cards{
-    background-color: yellow;
+    background-color: var(--bee-yellow);
     color: black;
     height: 12em;
     width: 18em;
@@ -39,7 +94,7 @@
 }
 
 .review-card-center{
-    background-color: yellow;
+    background-color: var(--bee-yellow);
     color: black;
     height: 15em;
     width: 18em;
