--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ input{
     position: absolute;
     background-color: whitesmoke;
     color: black;
+    top: 40px;
 }
 
 .bee-at-comb{
@@ -113,4 +114,12 @@ input{
     text-align: center;
     font-family: poetsan;
 
+}
+
+@media screen and (max-width: 767.98px) {
+    .mid-page-card {
+        position: unset;
+        display: block;
+        margin: 2em;
+    }
 }
